# custom-discord-rpc

./: README.md  config.ini  main.c  main.cpp  meson.build  stuff.c  stuff.cpp  stuff.h
src/: main.c  meson.build  stuff.c  stuff.h
